--- a/style.css
+++ b/style.css
@@ -18,7 +18,17 @@ body{
     border-radius: 4px;
     font-weight: 700;
 }
-
+.section-title{
+    color: #050505;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+section-dis{
+    color: #252525;
+    font-size: 18px;
+    text-align: center;
+}
 nav{
     display: flex;
     align-items: center;
@@ -48,12 +58,34 @@ nav a{
 /* Header start */
 .header{
     background-color: #ebd3c44f;
-    height: 100vh;
+    background-image: url(./images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     /* height: 100vh; */
+}
+.banner-geeting{
+    color: #050505;
+    margin: 0px;
+}
+.banner-title{
+    font-size: 40px;
+}
+.banner .profile-pic{
+    width: 400px;
+}
+.banner p{
+    font-size: 16px;
+    font-weight: 400;
+}
+/* about section */
+.about{
+    padding: 130px;
+    margin: 130px 0px;
+    background-color: antiquewhite;
 }
